src/test/ui/for/for-loop-refutable-pattern-error-message.stderr
error[E0005]: refutable pattern in `for` loop binding: `&std::i32::MIN..=0i32` not covered
  --> $DIR/for-loop-refutable-pattern-error-message.rs:2:9
   |
LL |     for &1 in [1].iter() {}
   |         ^^ pattern `&std::i32::MIN..=0i32` not covered

error: aborting due to previous error

For more information about this error, try `rustc --explain E0005`.
